# OpusCodecForAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opus-codec/: CMakeLists.txt  build.gradle
opus-codec/libs/: README
opus-codec/src/main/: AndroidManifest.xml
opus-codec/src/main/java/com/cyf/opuscodec/: OpusUtil.java
opus-codec/src/main/jni/: Android.mk  README  opus_util.c
